[project]
name = "test-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vronst", email = "vronst@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
test-repo = "test_repo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
