[project]
name = "test-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vronst", email = "vronst@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.4.1",
    "sphinx>=8.1.3",
]

[project.scripts]
test-repo = "test_repo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
